@@ -15,13 +15,13 @@ using namespace std;
 class FloatIOTest : public CPPUNIT_NS::TestCase
 {
   CPPUNIT_TEST_SUITE(FloatIOTest);
-  CPPUNIT_TEST(float_input_test);
   CPPUNIT_TEST(float_output_test);
+  CPPUNIT_TEST(float_input_test);
   CPPUNIT_TEST_SUITE_END();
 
 protected:
-  void float_input_test();
   void float_output_test();
+  void float_input_test();
 
   static bool check_float (float val, float ref) {
     float epsilon = numeric_limits<float>::epsilon();
@@ -48,47 +48,57 @@ void FloatIOTest::float_output_test()
   float test_val = (float)1.23457e+17;
   
   ostr << test_val;
+  CPPUNIT_ASSERT(ostr.good());
   output = reset_stream(ostr);
   CPPUNIT_ASSERT(output == "1.23457e+17");
 
   ostr << fixed << test_val;
+  CPPUNIT_ASSERT(ostr.good());
   output = reset_stream(ostr);
   CPPUNIT_ASSERT(output.size() == 25);
   CPPUNIT_ASSERT(output.substr(0, 5) == "12345");
   CPPUNIT_ASSERT(output.substr(18) == ".000000");
 
   ostr << showpos << test_val;
+  CPPUNIT_ASSERT(ostr.good());
   output = reset_stream(ostr);
   CPPUNIT_ASSERT(output.size() == 26);
   CPPUNIT_ASSERT(output.substr(0, 6) == "+12345");
   CPPUNIT_ASSERT(output.substr(19) == ".000000");
 
   ostr << setprecision(100) << test_val;
+  CPPUNIT_ASSERT(ostr.good());
   output = reset_stream(ostr);
   CPPUNIT_ASSERT(output.size() == 120);
   CPPUNIT_ASSERT(output.substr(0, 6) == "+12345");
   CPPUNIT_ASSERT(output.substr(19) == ".0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000" );
   
   ostr << noshowpos << scientific;
+  CPPUNIT_ASSERT(ostr.good());
 
   test_val = 0.12345678f;
   ostr << setprecision(8) << test_val;
+  CPPUNIT_ASSERT(ostr.good());
   output = reset_stream(ostr);
   CPPUNIT_ASSERT(output == "1.23456784e-01");
   
   ostr << setw(30) << fixed << setfill('0') << test_val;
+  CPPUNIT_ASSERT(ostr.good());
   output = reset_stream(ostr);
   CPPUNIT_ASSERT(output == "000000000000000000000.12345678");
   
   ostr << setw(30) << showpos << test_val;
+  CPPUNIT_ASSERT(ostr.good());
   output = reset_stream(ostr);
   CPPUNIT_ASSERT(output == "0000000000000000000+0.12345678");
   
   ostr << setw(30) << left << test_val;
+  CPPUNIT_ASSERT(ostr.good());
   output = reset_stream(ostr);
   CPPUNIT_ASSERT(output == "+0.123456780000000000000000000");
 
   ostr << setw(30) << internal << test_val;
+  CPPUNIT_ASSERT(ostr.good());
   output = reset_stream(ostr);
   CPPUNIT_ASSERT(output == "+00000000000000000000.12345678");
 }
@@ -101,31 +111,35 @@ void FloatIOTest::float_input_test()
 
   istr.str("1.2345");
   istr >> in_val;
-  CPPUNIT_ASSERT(istr);
+  CPPUNIT_ASSERT(!istr.fail());
+  CPPUNIT_ASSERT(istr.eof());
   CPPUNIT_ASSERT(check_float(in_val, 1.2345f));
   istr.clear();
 
   istr.str("-1.2345");
   istr >> in_val;
-  CPPUNIT_ASSERT(istr);
+  CPPUNIT_ASSERT(!istr.fail());
+  CPPUNIT_ASSERT(istr.eof());
   CPPUNIT_ASSERT(check_float(in_val, -1.2345f));
   istr.clear();
 
   istr.str("+1.2345");
   istr >> in_val;
-  CPPUNIT_ASSERT(istr);
+  CPPUNIT_ASSERT(!istr.fail());
   CPPUNIT_ASSERT(check_float(in_val, 1.2345f));
   istr.clear();
 
   istr.str("000000000000001.234500000000");
   istr >> in_val;
-  CPPUNIT_ASSERT(istr);
+  CPPUNIT_ASSERT(!istr.fail());
+  CPPUNIT_ASSERT(istr.eof());
   CPPUNIT_ASSERT(check_float(in_val, 1.2345f));
   istr.clear();
 
   istr.str("1.2345e+04");
   istr >> in_val;
-  CPPUNIT_ASSERT(istr);
+  CPPUNIT_ASSERT(!istr.fail());
+  CPPUNIT_ASSERT(istr.eof());
   CPPUNIT_ASSERT(check_float(in_val, 12345.0f));
   istr.clear();
 }
