@@ -1,13 +1,6 @@
-#include <memory>
 #include <string>
 #include <sstream>
 #include <locale>
-
-#include "cppunit/cppunit_proxy.h"
-
-#if !defined (STLPORT) || defined(_STLP_USE_NAMESPACES)
-using namespace std;
-#endif
 
 #if defined(__unix) || defined(__unix__)
 # include <sys/types.h>
@@ -18,8 +11,13 @@ using namespace std;
 # include <iostream>
 #endif
 
-#include <string>
 #include <map>
+
+#include "cppunit/cppunit_proxy.h"
+
+#if !defined (STLPORT) || defined(_STLP_USE_NAMESPACES)
+using namespace std;
+#endif
 
 
 class LColl {
@@ -80,10 +78,11 @@ struct ref_locale {
 };
 
 static ref_locale tested_locales[] = {
-  { "french", ",", ".", "", " EUR" },
-  { "ru_RU.koi8r", ",", " ", "", " RUR" },
-  { "en_GB", ".", "'", "GBP ", "" },
-  { "en_US", ".", "'", "USD ", "" }
+//{  name,         decimal_point, thousands_sep, money_prefix, money_suffix},
+  { "french",      ",",           "\xa0",       "",           " EUR" },
+  { "ru_RU.koi8r", ",",           " ",           "",           " RUR" },
+  { "en_GB",       ".",           "'",           "GBP ",       "" },
+  { "en_US",       ".",           "'",           "USD ",       "" }
 };
 
 //
@@ -120,6 +119,11 @@ void LocaleTest::_num_put_get( const locale& loc, const ref_locale& rl ) {
   CPPUNIT_ASSERT( ostr.str() == "1234.56" );
 
   numpunct<char> const& npct = use_facet<numpunct<char> >(loc);
+
+  CPPUNIT_ASSERT( npct.decimal_point() == *rl.decimal_point );
+  CPPUNIT_ASSERT( npct.thousands_sep() == *rl.thousands_sep );
+
+
   ostringstream fostr;
   fostr.imbue(loc);
   fostr << val;
@@ -137,7 +141,7 @@ void LocaleTest::_num_put_get( const locale& loc, const ref_locale& rl ) {
   CPPUNIT_ASSERT( ostr.str() == "1.23457e+07" );
 
   ref = "1";
-  ref += rl.decimal_point;
+  ref += npct.decimal_point();
   ref += "23457e+07";
   fostr.str("");
   fostr << val;
@@ -170,11 +174,11 @@ void LocaleTest::_money_put_get( const locale& loc, const ref_locale& rl )
 
   // cout << "code " << hex << int(str_res[0]) << dec << ' ' << str_res << endl;
   CPPUNIT_ASSERT( str_res[0] == '1' );
-  CPPUNIT_ASSERT( str_res[1] == /* intl_fmp.thousands_sep() */ *rl.thousands_sep );
+  CPPUNIT_ASSERT( str_res[1] == intl_fmp.thousands_sep() );
   CPPUNIT_ASSERT( str_res[2] == '2' );
   CPPUNIT_ASSERT( str_res[3] == '3' );
   CPPUNIT_ASSERT( str_res[4] == '4' );
-  CPPUNIT_ASSERT( str_res[5] == /* intl_fmp.decimal_point() */ *rl.decimal_point );
+  CPPUNIT_ASSERT( str_res[5] == intl_fmp.decimal_point() );
   CPPUNIT_ASSERT( str_res[6] == '5' );
   CPPUNIT_ASSERT( str_res[7] == '6' );
   CPPUNIT_ASSERT( str_res[8] == ' ' );
@@ -241,7 +245,7 @@ void LocaleTest::num_put_get() {
   int n = sizeof(tested_locales) / sizeof(tested_locales[0]);
   for ( int i = 0; i < n; ++i ) {
     if ( loc_ent[string( tested_locales[i].name )] ) {
-      cout << '\t' << tested_locales[i].name << endl;
+      //cout << '\t' << tested_locales[i].name << endl;
       locale loc( tested_locales[i].name );
       _num_put_get( loc, tested_locales[i] );
     }
@@ -252,7 +256,7 @@ void LocaleTest::money_put_get() {
   int n = sizeof(tested_locales) / sizeof(tested_locales[0]);
   for ( int i = 0; i < n; ++i ) {
     if ( loc_ent[string( tested_locales[i].name )] ) {
-      cout << '\t' << tested_locales[i].name << endl;
+      //cout << '\t' << tested_locales[i].name << endl;
       locale loc( tested_locales[i].name );
       _money_put_get( loc, tested_locales[i] );
     }
@@ -263,7 +267,7 @@ void LocaleTest::time_put_get() {
   int n = sizeof(tested_locales) / sizeof(tested_locales[0]);
   for ( int i = 0; i < n; ++i ) {
     if ( loc_ent[string( tested_locales[i].name )] ) {
-      cout << '\t' << tested_locales[i].name << endl;
+      //cout << '\t' << tested_locales[i].name << endl;
       locale loc( tested_locales[i].name );
       _time_put_get( loc, tested_locales[i] );
     }
