@@ -49,6 +49,7 @@ void SetUnionTest::setunon0()
   CPPUNIT_ASSERT(result[5]==0);
   CPPUNIT_ASSERT(result[6]==0);
 }
+
 void SetUnionTest::setunon1()
 {
   vector <int> v1(10);
@@ -59,11 +60,10 @@ void SetUnionTest::setunon1()
   ostream_iterator <int> iter(os, " ");
 
   set_union(v1.begin(), v1.end(), v2.begin(), v2.end(), iter);
-
-  stringbuf* buff=os.rdbuf();
-  string result=buff->str();
-  CPPUNIT_ASSERT(!strcmp(result.c_str(), "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 "));
+  CPPUNIT_ASSERT(os.good());
+  CPPUNIT_ASSERT(os.str() == "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 ");
 }
+
 void SetUnionTest::setunon2()
 {
   char* word1 = "ABCDEFGHIJKLMNO";
@@ -72,8 +72,6 @@ void SetUnionTest::setunon2()
   ostream_iterator <char> iter(os, " ");
 
   set_union(word1, word1 + ::strlen(word1), word2, word2 + ::strlen(word2), iter, less<char>());
-
-  stringbuf* buff=os.rdbuf();
-  string result=buff->str();
-  CPPUNIT_ASSERT(!strcmp(result.c_str(), "A B C D E F G H I J K L M N O P Q R S T U V W X Y Z "));
+  CPPUNIT_ASSERT(os.good());
+  CPPUNIT_ASSERT(os.str() == "A B C D E F G H I J K L M N O P Q R S T U V W X Y Z ");
 }
